--- a/app/src/main/res/layout/fragment_face_create.xml
+++ b/app/src/main/res/layout/fragment_face_create.xml
@@ -16,11 +16,11 @@
         android:layout_height="wrap_content"
         app:ct_enable_theme="true"
         app:ct_icon="@drawable/nav_tab_back_selector"
+        app:ct_icon_right="@drawable/icon_finish_selector"
         app:ct_left_title="@string/MESSAGES_IDENTIFY_CREATE_BTN"
-        app:ct_left_title_color="@color/color_white"
-        app:ct_right_title="@string/FINISHED" />
+        app:ct_left_title_color="@color/color_white" />
 
-    <ImageView
+    <com.cylan.jiafeigou.support.photoselect.CircleImageView
         android:id="@+id/picture"
         android:layout_width="@dimen/y120"
         android:layout_height="@dimen/y120"
