--- a/app/src/main/res/layout/layout_item_cam_msg_1pic.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_1pic.xml
@@ -2,7 +2,7 @@
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lLayout_cam_msg_container"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/y234"
+    android:layout_height="wrap_content"
     android:background="@color/color_white"
     android:clickable="true"
     android:focusable="true"
@@ -58,9 +58,21 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/watcher_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="end"
+                android:layout_marginBottom="@dimen/y15"
+                android:text="文化宫额回购二维化工文化"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/sp12" />
+
+            <TextView
                 android:id="@+id/tv_cam_message_item_date"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/y26"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/watcher_text"
                 android:gravity="center"
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp13" />
