--- a/app/src/main/res/layout/layout_item_cam_msg_text.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_text.xml
@@ -67,7 +67,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:layout_marginBottom="@dimen/y15"
-                    android:text="文化宫额回购二维化工文化" />
+                    android:text="最近30天来访15次"
+                    android:textColor="@color/color_999999"
+                    android:textSize="@dimen/sp12" />
 
                 <TextView
                     android:id="@+id/tv_cam_message_item_date"
