--- a/app/src/main/res/layout/layout_item_cam_msg_1pic.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_1pic.xml
@@ -64,7 +64,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_gravity="end"
                 android:layout_marginBottom="@dimen/y15"
-                android:text="文化宫额回购二维化工文化"
+                android:text="最近30天来访15次"
                 android:textColor="@color/color_999999"
                 android:textSize="@dimen/sp12" />
 
