--- a/app/src/main/res/layout/fragment_set_face_name.xml
+++ b/app/src/main/res/layout/fragment_set_face_name.xml
@@ -24,9 +24,10 @@
         android:layout_marginEnd="@dimen/y20"
         android:layout_marginStart="@dimen/y20"
         android:layout_marginTop="@dimen/y8"
-
         android:text="@string/Tap1_AddDevice_CameraTips"
+
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp16" />
+        android:textSize="@dimen/sp16"
+        android:theme="@style/EditTextTheme" />
 
 </LinearLayout>
