--- a/app/src/main/res/layout/fragment_face_manager.xml
+++ b/app/src/main/res/layout/fragment_face_manager.xml
@@ -26,6 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_below="@+id/custom_toolbar"
+        android:layout_margin="@dimen/y2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
