--- a/app/src/main/res/layout/layout_face_manager_pop_alert.xml
+++ b/app/src/main/res/layout/layout_face_manager_pop_alert.xml
@@ -1,19 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/shadow">
 
-    <TextView
-        android:id="@+id/delete"
-        android:layout_width="wrap_content"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="@dimen/y150"
         android:layout_height="wrap_content"
-        android:text="@string/DELETE" />
+        android:background="@color/color_white"
+        android:minWidth="@dimen/y150"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/y10"
+        android:paddingEnd="@dimen/y12"
+        android:paddingStart="@dimen/y12"
+        android:paddingTop="@dimen/y10">
 
-    <TextView
-        android:id="@+id/move_to"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/MESSAGES_FACE_MOVE_BTN" />
+        <TextView
+            android:id="@+id/delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/y12"
+            android:text="@string/DELETE"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp16" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/move_to"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/y12"
+            android:text="@string/MESSAGES_FACE_MOVE_BTN"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp16" />
+
+    </LinearLayout>
+</FrameLayout>
