--- a/app/src/main/res/layout/fragment_face_create.xml
+++ b/app/src/main/res/layout/fragment_face_create.xml
@@ -25,17 +25,36 @@
         android:layout_width="@dimen/y120"
         android:layout_height="@dimen/y120"
         android:layout_marginTop="@dimen/y48"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/icon_mine_head_normal" />
 
-    <EditText
-        android:id="@+id/name"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/y20"
-        android:layout_marginStart="@dimen/y20"
-        android:layout_marginTop="@dimen/y40"
-        android:gravity="center"
-        android:hint="@string/LOCATION_NAME_ERROR"
-        android:textColor="@color/color_666666"
-        android:theme="@style/EditTextTheme" />
+        android:layout_height="@dimen/y54"
+
+        android:layout_marginTop="@dimen/y40">
+
+
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/y20"
+            android:layout_marginStart="@dimen/y20"
+            android:background="@null"
+            android:gravity="center"
+            android:hint="@string/LOCATION_NAME_ERROR"
+            android:textColor="@color/color_666666"
+            android:textColorHint="@color/color_cecece"
+            android:textCursorDrawable="@drawable/bg_common_cursor"
+            android:textSize="@dimen/sp15" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y1"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="@dimen/y7"
+            android:layout_marginEnd="@dimen/y20"
+            android:layout_marginStart="@dimen/y20"
+            android:background="@color/color_f2f2f2" />
+    </FrameLayout>
 </LinearLayout>
