--- a/app/src/main/res/layout/fragment_face_manager.xml
+++ b/app/src/main/res/layout/fragment_face_manager.xml
@@ -66,7 +66,7 @@
         android:layout_height="@dimen/y48"
         android:layout_alignParentBottom="true"
         android:background="@color/color_f6f9fa"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <View
